--- a/views/index.html
+++ b/views/index.html
@@ -5,9 +5,9 @@
     <title>はじめの一歩</title>
   </head>
   <body>
-    <h1 id="result">ここに出力</h1>
+    <h1 id="result1">ここに出力</h1>
     <script>
-      const hResult = document.getElementById('result');
+      const hResult = document.getElementById('result1');
       const text01  = hResult.innerText;
       // alert(text01); // アラート表示
       console.log(text01); // 標準出力
@@ -15,9 +15,60 @@
       hResult.style.fontSize = '50px'; // フォントサイズ変更
       hResult.style.color = 'orange'; // 色の変更
     </script>
+    
     <form method="post" action="/post1">
       <input type="text" name="param1"/>
       <input type="submit"/>
     </form>
+    
+    <input type="button" value="find" onclick="findUsers()"/>
+    <div id="result"></div><!-- ここにスクリプトを記述する -->
+    <p id="maxage"></p>
+    <script>
+      const result = document.getElementById('result'); // 操作する p 要素
+      function findUsers() {
+        const url = '/find'; // 通信先
+        const req = new XMLHttpRequest(); // 通信用オブジェクト(importするmodule的な)
+        req.onreadystatechange = function(){
+          if(req.readyState == 4 && req.status == 200) {
+            const users = JSON.parse(req.response);
+            let len = users.length; // 何個のデータが入っているか
+            let agemax = 0;
+            let key = 0;
+            for(let i in users) {
+              const pName = document.createElement('p'); // p 要素
+              pName.innerText = users[i].name; // name の値を設定
+              result.appendChild(pName); // 情報表示部に追加
+              let age = users[i].age;
+              if(age > agemax) {
+                agemax = age;
+                key = i;
+              }
+            }
+            maxage.innerText = '最高齢：' + users[key].name + '年齢：' + users[key].age; // 最初のユーザの名前を適宜変更したりした
+          }
+        };
+        while(result.firstChild) result.removeChild(result.firstChild);
+        req.open('GET', url, true);
+        req.send();
+      }
+    </script>
+    
+    <input type="button" value="save" onclick="saveUser()"/>
+    <script>
+      function saveUser() {
+        const url = '/save'; // 通信先
+        const req = new XMLHttpRequest(); // 通信用オブジェクト
+        req.onreadystatechange = function(){
+          if(req.readyState == 4 && req.status == 200) {
+            alert('成功'); // 成功したらアラート表示
+          }
+        };
+        const user = {name: 'ジョン', age: 56}; // 保存対象（適宜変更する）
+        req.open('POST', url, true);
+        req.setRequestHeader('Content-Type', 'application/json');
+        req.send(JSON.stringify(user)); // オブジェクトを文字列化して送信
+      }
+    </script>
   </body>
 </html>
